chore: 配置 GitHub 作为发布提供者
将 electron-builder 的发布目标配置为 GitHub，并设置发布类型为正式版（release）。

--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
       "package.json",
       "**/*"
     ],
+    "publish": {
+      "provider": "github",
+      "releaseType": "release"
+    },
     "win": {
       "target": [
         "nsis",
