--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "@xterm/addon-fit": "^0.11.0",
     "@xterm/addon-search": "^0.16.0",
     "@xterm/xterm": "^6.0.0",
+    "electron-log": "^5.4.3",
+    "electron-updater": "^6.7.3",
     "iconv-lite": "^0.7.2",
     "node-pty": "^1.1.0",
     "serialport": "^13.0.0"
