ci: 配置自动构建的发布说明和仓库信息
- 在 package.json 中为 electron-builder 添加 releaseNotesFile 配置，并规范 repository 字段格式
- 在 GitHub Actions 工作流中移除 .npmrc 文件，并集成 release-changelog-builder-action 来自动生成分类的发布说明
- 在生成的发布说明末尾添加中英文下载指引

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
       "package.json",
       "**/*"
     ],
+    "releaseInfo": {
+      "releaseNotesFile": "release-notes.md"
+    },
     "publish": {
       "provider": "github",
       "releaseType": "release"
@@ -58,7 +61,10 @@
     "name": "Trigger-CN",
     "email": "759025229@qq.com"
   },
-  "repository": "https://github.com/Trigger-CN/SerialTerminal",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Trigger-CN/SerialTerminal.git"
+  },
   "license": "ISC",
   "devDependencies": {
     "@electron/rebuild": "^3.6.0",
