--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,10 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
+      - name: Remove .npmrc
+        shell: bash
+        run: rm -f .npmrc
+
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
@@ -35,8 +39,40 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libudev-dev
 
+      - name: Build Changelog
+        id: build_changelog
+        uses: mikepenz/release-changelog-builder-action@v4
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          configurationJson: |
+            {
+              "template": "#{{CHANGELOG}}",
+              "categories": [
+                {
+                    "title": "## 🚀 Features",
+                    "labels": ["feat", "feature"]
+                },
+                {
+                    "title": "## 🐛 Fixes",
+                    "labels": ["fix", "bug"]
+                },
+                {
+                    "title": "## 📦 Other Changes",
+                    "labels": []
+                }
+              ]
+            }
+
+      - name: Prepare Release Notes
+        shell: bash
+        run: |
+          echo "${{ steps.build_changelog.outputs.changelog }}" > release-notes.md
+          echo -e "\n\n## 📦 Downloads / 产物下载\n请在下方的 **Assets** 区域下载安装包：\n- **Windows**: 使用 \`.exe\` (安装版) 或 \`.exe\` (便携版)\n- **Linux**: 使用 \`.AppImage\` 或 \`.deb\`" >> release-notes.md
+
       - name: Build and Publish (Windows)
         if: matrix.os == 'windows-latest'
+        shell: bash
         run: npm run dist:win -- -p always
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
